--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,24 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InvoiceAI - Automated Invoice Processing</title>
+  <title>AvFrontEnd</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="AI-powered invoice processing and management system">
-  <meta name="theme-color" content="#a855f7">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
-  <!-- Preconnect to fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
-  <!-- Inter Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  
-  <!-- Material Icons (if needed) -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body data-theme="dark">
+<body>
   <app-root></app-root>
 </body>
 </html>
